Sun Mar 24 20:28:48 2002  Brian Gough  <bjg@network-theory.co.uk>

	* oper_complex_source.c: complex matrix operations (from Toby
 	White)
	
Mon Feb 18 20:33:58 2002  Brian Gough  <bjg@network-theory.co.uk>

	* copy_source.c (gsl_matrix_swap): fixed prototype by removing
 	const from second arg.

Sun Jan 27 22:29:37 2002  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: ensure that range check is working when running the
 	tests

Fri Sep 14 18:56:34 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view_source.c: fixed cast for array type

	* view.c: added #includes for missing const qualified types

	* view_source.c: error for non-unit strides

Fri Aug  3 14:11:23 2001  Brian Gough  <bjg@network-theory.co.uk>

	* added gsl_matrix_ptr and gsl_matrix_const_ptr functions

Mon Jul 16 21:28:05 2001  Brian Gough  <bjg@network-theory.co.uk>

	* rowcol_source.c (FUNCTION): initialized view to NULL

Fri Jul 13 21:29:27 2001  Brian Gough  <bjg@network-theory.co.uk>

	* changed views to be structs and used casts to initialize them

Mon Jul  2 12:35:16 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view.h:  provide macros for initializing null
 	vectors and views

Sun Jul  1 22:44:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* introduction of new-style vector/matrix views

Fri Jun  1 17:04:52 2001  Brian Gough  <bjg@network-theory.co.uk>

	* getset_source.c: made these routines work with the current
 	matrix struct, previously they would give incorrect results

Mon May 14 22:43:39 2001  Brian Gough  <bjg@network-theory.co.uk>

	* matrix_source.c (FUNCTION): removed unnecessary inline from
 	static function definition

Tue May  1 23:09:25 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_matrix_float.h (struct ): MS VC++ requires that the
 	struct/typedef be made with a single definition

Mon Mar 26 20:33:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* view_source.c: split view functions out into a separate file
