@@ -1,3 +1,8 @@
+Wed May  1 21:33:44 2002  Brian Gough  <bjg@network-theory.co.uk>
+
+	* gsl_matrix_complex_float.h (gsl_matrix_complex_float_get): moved
+ 	constant zero inside GSL_RANGE_CHECK_OFF
+
 Sun Mar 24 20:28:48 2002  Brian Gough  <bjg@network-theory.co.uk>
 
 	* oper_complex_source.c: complex matrix operations (from Toby
